--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
     "eject": "react-scripts eject",
     "lint": "eslint ./src"
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -50,6 +56,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.3",
+    "@types/react": "^17.0.27",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/parser": "^4.33.0",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^1.13.2",
     "eslint-config-prettier": "^8.3.0",
@@ -61,6 +72,7 @@
     "jest-in-case": "^1.0.2",
     "msw": "^0.35.0",
     "prettier": "^2.4.1",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^17.0.2",
+    "typescript": "^4.4.3"
   }
 }
